crates/swc_ecma_parser/tests/test262-error-references/fail/6c3a76d368c398cc.js.stderr
error: Expected 4 hex characters
 --> $DIR/tests/test262-parser/fail/6c3a76d368c398cc.js:1:2
  |
1 | a\u1z  
  |  ^^^

